[gd_scene load_steps=21 format=3 uid="uid://clixcby1mmxr3"]

[ext_resource type="Script" path="res://scripts/help_screen.gd" id="1_u7n5r"]
[ext_resource type="Texture2D" uid="uid://8f0rfohmniwa" path="res://assets/menuUI.png" id="2_xqowa"]
[ext_resource type="Texture2D" uid="uid://dm1bh2yywotao" path="res://assets/icon.png" id="3_rno1h"]
[ext_resource type="Theme" uid="uid://clxftkhcliti8" path="res://assets/UI_theme.tres" id="4_pm8ji"]
[ext_resource type="Theme" uid="uid://dm4jlnbmnj4eb" path="res://assets/UI_theme_dark.tres" id="5_wev1s"]
[ext_resource type="Theme" uid="uid://dix1yxdlw8hbv" path="res://assets/UI_theme_smol.tres" id="6_ijdgy"]
[ext_resource type="Theme" uid="uid://cf6ttsgxwgavd" path="res://assets/UI_theme_blue.tres" id="7_3nugk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1hr"]
atlas = ExtResource("2_xqowa")
region = Rect2(128, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_satxt"]
atlas = ExtResource("2_xqowa")
region = Rect2(128, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jshf"]
atlas = ExtResource("2_xqowa")
region = Rect2(128, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn7p1"]
atlas = ExtResource("2_xqowa")
region = Rect2(128, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx556"]
atlas = ExtResource("2_xqowa")
region = Rect2(10, 10, 28, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t8ji"]
atlas = ExtResource("2_xqowa")
region = Rect2(144, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8swhf"]
atlas = ExtResource("2_xqowa")
region = Rect2(144, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3jyp"]
atlas = ExtResource("2_xqowa")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx5ba"]
atlas = ExtResource("2_xqowa")
region = Rect2(144, 48, 16, 16)

[sub_resource type="Animation" id="Animation_pgs46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q7hml"]
resource_name = "exit"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(2.37841, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_e453m"]
resource_name = "open"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 2.37841),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07tyb"]
_data = {
"RESET": SubResource("Animation_pgs46"),
"exit": SubResource("Animation_q7hml"),
"open": SubResource("Animation_e453m")
}

[node name="helpscreen" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7n5r")

[node name="TextureButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = -296.0
offset_top = -162.0
offset_right = -280.0
offset_bottom = -146.0
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_qt1hr")
texture_pressed = SubResource("AtlasTexture_satxt")
texture_hover = SubResource("AtlasTexture_3jshf")
texture_disabled = SubResource("AtlasTexture_nn7p1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color(0.862893, 0.855188, 0.794828, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -167.5
offset_right = 304.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kx556")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 9.0
offset_right = 204.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 82
alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_rno1h")
expand_mode = 3

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_pm8ji")
theme_override_colors/font_color = Color(0.178263, 0.423711, 0.665043, 1)
theme_override_font_sizes/font_size = 32
text = "Frequently Asked Questions"

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_rno1h")
expand_mode = 3
flip_h = true

[node name="spacer" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
theme = ExtResource("5_wev1s")

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2

[node name="title3" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_3nugk")
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 16
text = "I don't have all the rack textures for the new blankets and girth straps... What do I do?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel5" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "It's okay, you can select \"No\" for custom rack textures and the rack textures I made for saddle blankets (both English and Western), girth straps, and pasture blankets (armor and normal), will be saved in your pack folder properly named. "
horizontal_alignment = 1
autowrap_mode = 2

[node name="spacer5" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
theme = ExtResource("5_wev1s")

[node name="title4" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_3nugk")
theme_override_font_sizes/font_size = 16
text = "What if I want to update the rack textures later?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel6" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "Then just name your new textures the same as the old ones and replace them in the folder!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="spacer6" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
theme = ExtResource("5_wev1s")

[node name="title5" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_3nugk")
theme_override_font_sizes/font_size = 16
text = "I got an error message!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel7" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "Most times it is related to your file path, check and make sure the file on the main menu is still in the location listed!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2

[node name="title2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("7_3nugk")
theme_override_constants/line_spacing = -1
theme_override_font_sizes/font_size = 16
text = "What do I need to do after generating the 
files in this application?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel4" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "You will need to add the textures according to the INSTRUCTIONS.txt document that is generated in the pack folder. 
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="spacer3" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="title3" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_3nugk")
theme_override_font_sizes/font_size = 16
text = "~~ Helpful Texture Notes ~~"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel5" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_colors/font_color = Color(0.113725, 0.415686, 0.290196, 1)
text = "For saddles:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel6" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "Saddle Rack and Armor Rack textures are the exact same texture, just with different names."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel7" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_colors/font_color = Color(0.113725, 0.415686, 0.290196, 1)
text = "For Leg Wraps:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HelperLabel8" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
theme = ExtResource("5_wev1s")
theme_override_constants/line_spacing = -2
text = "Both the 'Normal' and 'Hoof' textures are the same, just with different names."
horizontal_alignment = 1
autowrap_mode = 2

[node name="spacer4" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 9)
layout_mode = 2
theme = ExtResource("5_wev1s")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="HelperLabel9" type="Label" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_ijdgy")
theme_override_colors/font_color = Color(0.113924, 0.41665, 0.289974, 1)
text = "If you have more questions or experience bugs,
"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HelperLabel7" type="Label" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("6_ijdgy")
theme_override_colors/font_color = Color(0.113924, 0.41665, 0.289974, 1)
text = "please join my
"
horizontal_alignment = 1

[node name="LinkButton" type="LinkButton" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.198815, 0.4217, 0.443676, 1)
theme_override_colors/font_focus_color = Color(0.957863, 0.999282, 0.975755, 1)
theme_override_colors/font_pressed_color = Color(0.0915672, 0.352416, 0.243904, 1)
theme_override_colors/font_hover_color = Color(0.783671, 0.933012, 0.946132, 1)
theme_override_colors/font_hover_pressed_color = Color(0.194243, 0.672641, 0.474787, 1)
text = "Discord server"
uri = "https://discord.gg/GuYRWK22Mx"

[node name="HelperLabel8" type="Label" parent="NinePatchRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("6_ijdgy")
theme_override_colors/font_color = Color(0.113924, 0.41665, 0.289974, 1)
text = "to get more help!"
horizontal_alignment = 1

[node name="backButton" type="TextureButton" parent="NinePatchRect"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 7.0
offset_top = 297.0
offset_right = 23.0
offset_bottom = 313.0
scale = Vector2(2, 2)
texture_normal = SubResource("AtlasTexture_3t8ji")
texture_pressed = SubResource("AtlasTexture_8swhf")
texture_hover = SubResource("AtlasTexture_p3jyp")
texture_disabled = SubResource("AtlasTexture_fx5ba")

[node name="HelperLabel5" type="Label" parent="NinePatchRect"]
offset_left = 41.0
offset_top = 313.0
offset_right = 65.0
offset_bottom = 327.0
size_flags_horizontal = 4
theme = ExtResource("6_ijdgy")
theme_override_colors/font_color = Color(0.493728, 0.364523, 0.227402, 1)
text = "Return "
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_07tyb")
}

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="NinePatchRect/backButton" to="." method="_on_back_button_pressed"]
